syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string accessToken = 2;
  string refreshToken = 3;
  User user = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
}

message RegisterResponse {
  bool success = 1;
  string accessToken = 2;
  string refreshToken = 3;
  User user = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message LogoutRequest {
  string userId = 1;
}

message LogoutResponse {
  bool success = 1;
}

message User {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
  string createdAt = 6;
  string updatedAt = 7;
} 